libludi/tests/snapshots/codegen_test__large_constant_int.snap
---
source: libludi/tests/codegen_test.rs
expression: mlir
---
module {
  func.func @main() {
    %c9223372036854775807_i64 = arith.constant 9223372036854775807 : i64
    return
  }
}
