libludi/tests/snapshots/codegen_test__return_constant_float.snap
---
source: libludi/tests/codegen_test.rs
expression: mlir
---
module {
  func.func @main() {
    %cst = arith.constant 2.400000e+00 : f64
    return
  }
}
