libludi/tests/snapshots/codegen_test__zero_constant_float.snap
---
source: libludi/tests/codegen_test.rs
expression: mlir
---
module {
  func.func @main() {
    %cst = arith.constant 0.000000e+00 : f64
    return
  }
}
