libludi/tests/snapshots/codegen_test__zero_constant_int.snap
---
source: libludi/tests/codegen_test.rs
expression: mlir
---
module {
  func.func @main() {
    %c0_i64 = arith.constant 0 : i64
    return
  }
}
